--- a/sass/project.scss
+++ b/sass/project.scss
@@ -70,15 +70,6 @@
     }
   }
 
-  .byline {
-    margin: 4px 4px 10px 4px;
-    display: inline-block;
-
-    @media(max-width: 360px) {
-      font-size: 14px;
-    }
-  }
-
   p {
     margin: 4px;
     line-height: 1.2; 
